# rust-practice

httpie/: Cargo.toml
httpie/src/: main.rs
