[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
jsonxf = "1.1.1"
mime = "0.3.16"
reqwest = "0.11.14"
tokio = "1.24.2"
